--- a/calligraphy.html
+++ b/calligraphy.html
@@ -13,33 +13,37 @@
     />
     <!-- FONT -->
     <link rel="stylesheet" href="styles.css" />
+    <script src="script.js"></script>
     <script
       src="https://kit.fontawesome.com/be15bfe2c6.js"
       crossorigin="anonymous"
     ></script>
-    <title>Calligraphy - Kristen Lee Calligraphy</title>
+    <title>Calligraphy - Kristen Lee Calligraphy Clone</title>
   </head>
   <body>
+    <!-- SIDE NAV -->
+    <div id="mySidenav" class="sidenav">
+      <a class="nav-btn" href="index.html">HOME</a>
+      <div class="nav-btn" onclick="changeNav()">
+        SERVICES <i class="fa-solid fa-chevron-right"></i>
+      </div>
+      <a class="nav-btn" href="about.html">ABOUT</a>
+      <a class="nav-btn" href="contact.html">CONTACT</a>
+
+      <div id="mySidenav-2" class="sidenav">
+        <div class="nav-btn" onclick="unchangeNav()">
+          <i class="fa-solid fa-arrow-left-long"></i> BACK
+        </div>
+        <a class="nav-btn" href="calligraphy.html"><b>CALLIGRAPHY</b></a>
+        <a class="nav-btn" href="portrait.html"><b>PORTRAIT ART</b></a>
+        <a class="nav-btn" href="pyrography.html"><b>PYROGRAPHY</b></a>
+      </div>
+    </div>
+    <!-- SIDE NAV -->
+
     <div id="logo-section">
-      <a href="index.html"><img id="logo" src="./images/weblogo.png" /></a>
-
-      <!-- SIDE NAV -->
-      <div id="mySidenav" class="sidenav">
-        <a class="nav-btn" href="index.html">HOME</a>
-        <div class="nav-btn" onclick="changeNav()">
-          SERVICES <i class="fa-solid fa-chevron-right"></i>
-        </div>
-        <a class="nav-btn" href="about.html">ABOUT</a>
-        <a class="nav-btn" href="contact.html">CONTACT</a>
-
-        <div id="mySidenav-2" class="sidenav">
-          <div class="nav-btn" onclick="unchangeNav()">
-            <i class="fa-solid fa-arrow-left-long"></i> BACK
-          </div>
-          <a class="nav-btn" href="calligraphy.html"><b>CALLIGRAPHY</b></a>
-          <a class="nav-btn" href="portrait.html"><b>PORTRAIT ART</b></a>
-          <a class="nav-btn" href="pyrography.html"><b>PYROGRAPHY</b></a>
-        </div>
+      <div>
+        <a href="index.html"><img id="logo" src="./images/weblogo.png" /></a>
       </div>
 
       <span
@@ -55,30 +59,6 @@
         onclick="closeNav()"
         ><i class="fa-solid fa-x"></i
       ></span>
-
-      <script>
-        function changeNav() {
-          document.getElementById("mySidenav-2").style.width = "85%";
-        }
-
-        function unchangeNav() {
-          document.getElementById("mySidenav-2").style.width = "0";
-        }
-
-        function openNav() {
-          document.getElementById("mySidenav").style.width = "85%";
-          document.getElementById("more-btn").style.display = "none";
-          document.getElementById("closebtn").style.display = "flex";
-        }
-
-        function closeNav() {
-          document.getElementById("mySidenav").style.width = "0";
-          document.getElementById("mySidenav-2").style.width = "0";
-          document.getElementById("more-btn").style.display = "flex";
-          document.getElementById("closebtn").style.display = "none";
-        }
-      </script>
-      <!-- SIDE NAV -->
     </div>
 
     <div id="top-bar">
